--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<html>
+<head>
+<br>
+<h1>ชาญชนก First Page HTML</h1>
+<p>ทำการอธิบายที่ได้ศึกษา HTML </p>
+</head>
+<body>
+<h2>ในหัวข้อ HTML Elements</h2>
+<p> คำว่า Elements จะนิยามถึงทุกอย่างที่เริ่มจาก tag เปิดจนถึงปิด โดย มี tag <br>
+เช่น 
+
+</body>
+</html>
