--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <br>
-<h1>ชาญชนก &lt;First Page HTML&gt; </h1>
+<h1> &lt;First Page HTML&gt; </h1>
 <p>ทำการอธิบายที่ได้ศึกษา HTML </p>
 </head>
 <body>
@@ -38,6 +38,29 @@
 
 <h3>พิมพ์ใหญ่ กับ พิมพ์เล็ก จะไม่ใช่คำสั่งเดียวกันใน HTML</h3> 
 <p>เช่น <br>&lt;P&gt; ไม่ได้มีการทำงานเหมือนกับ &lt;p&gt;
+<br>
+<!-- ------------------------------------------------------------ -->
+<h2>ในหัวข้อ &lt; HTML Heading &gt; </h2>
+<p>Heading หมานถึวหัวข้อ ข้อความการประกาศ Heading นี้จะใข้ Tag &lt;h1&gt;, &lt;h2&gt; ,&lt;h3&gt; ไปจนถึง 6</p>
+<p>เช่นตัวอย่างนี้</p>
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
+
+<p>โดยเรียงลำดับความสำคัญ จากเลขจ้อยไปมาก</p>
+<p>โดยปกติมักจะใช้  &lt;h1&gt; เป็นหัวข้อหลัก &lt;h2&gt; หัวข้อรองลงมา &lt;h3&gt;ก็รองลงมา เรื่อยๆอีก </p>
+<h2>หากต้องการเพิ่มขนาดของ Heading เราจะใช้ attribute ของ option style ที่ชื่อว่า font-size </h2>
+<p> &lt;h1&gt; style="font-size:60px;">Heading 1 &lt;/h1&gt; </p>
+<p>ผลลัพธ์ที่ได้จะเป็นดังข้างล่าง </p>
+<h1 style="font-size:60px;">Heading 1</h1>
+
+
+<h2>ในหัวข้อ &lt; HTML Paragraphs &gt; </h2>
+
+
 
 
 </body>
