--- a/index.html
+++ b/index.html
@@ -196,10 +196,46 @@
       <h3>&lt;sub&gt;ทำให้ตัวอักษรเป็นตัวไขว้ใต้ตัวปกติ</h3>
         <p>This is <sup>superscripted</sup> text.</p>
     <hr>
-<h2></h2>
+    <h2>ในหัวข้อ HMTL Quotation and Citation Elements</h2>
+      <h3>&lt; blockquote&gt; ใช้สำหรับตประโยคที่นำมาจากแหล่งอื่น ตัวประโยคจะถูกย้อหน้า เช่นตัวอย่าง</h3>
+        &lt;blockquote cite="http://www.worldwildlife.org/who/index.html"&gt; <br>
+          For 50 years, WWF has been protecting the future of nature.The world's leading conservation <br>
+          organization,WWF works in 100 countries and is supported by1.2 million members in the <br>
+          United States andclose to 5 million globally. <br>
+        &lt;/blockquote&gt;
+        <blockquote cite="http://www.worldwildlife.org/who/index.html">
+          For nearly 60 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by more than one million members in the United States and close to five million globally.
+        </blockquote>
+      <h3>&lt;q&gt;ใช้สำหรับเครื่องหมายคำพูดในประโยค</h3>
+        &lt;p&gt;WWF's goal is to: &lt;q&gt;Build a future where people live in harmony with nature.&lt;/q&gt;&lt;/p&gt;
+        <p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
+      <h3>&lt;abbr title="......"&gt;ใช้สำหรับแสดงอักษรเต็ม ของตัวอักษรย่อ เช่น ดร. Dr.</h3>
+        &lt;p&gt;The &lt;abbr title="World Health Organization"&gt;WHO&lt;/abbr&gt; was founded in 1948.&lt;/p&gt;
+        <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+      <h3>&lt;address&gt;ใช้สำหรับประโยคที่เป็นที่อยู่</h3>
+        &lt;address&gt; <br>
+        Written by John Doe.<br>
+        Visit us at:<br>
+        Example.com<br>
+        Box 564, Disneyland<br>
+        USA <br>
+       &lt;/address&gt;
+        <br><br>
+       <address>
+        Written by John Doe.<br>
+        Visit us at:<br>
+        Example.com<br>
+        Box 564, Disneyland<br>
+        USA
+        </address>
+      <h3>&lt;cite&gt;ใช้สำหรับเป็นตัวบรรยาย tag ผลงานซึ่งจะแสดงผลเป็นตัว เอียงเหมือน &lt;i&gt;</h3>
+        <img src="img_the_scream.jpg" width="110" height="133" alt="The Scream">
+        <p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
+      <h3>&lt;bdo dir="rtl"&gt;.....&lt;/bdo&gt;จะทำให้ประโยคนั้นเรียงกลับหลัง</h3>
+        &lt;bdo&gt; dir="rtl">&lt;/bdo&gt;This line will be written from right to left&lt;/bdo&gt;<br>
+        <bdo dir="rtl">This line will be written from right to left</bdo>
 
-
-
+      <hr>
 
 
 
