--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
   <p>เช่น <br>&lt;P&gt; ไม่ได้มีการทำงานเหมือนกับ &lt;p&gt;
   <br>
   <hr>    
+    <h2>&lt;HTML Attribute&gt;</h2>
+      <h3>&lt;a&gt; เป็น tag ที่ใช้สำหรับกำหนด hyperlink href=..... ใส่เป็น URL</h3>
+        &lt;a href="https://www.w3schools.com">Visit W3Schools&lt;/a&gt;<br>
+        <a href="https://www.w3schools.com">Visit W3Schools</a>
+      <h3>src Attribute เราใช้ tag นี้ไว้ฝังภาพลงไปบนเว็บไซต์ เช่น</h3>
+        &lt;img src="img_girl.jpg"&gt;
+        <img src="img_girl.jpg">
+      <h3>width และ height Attribute ไว้สำหรับ</h3>
+        &lt;img src="img_girl."jpg width="500" height="600"&gt;
+      <h3>alt Attribute เป็น attribute สำหรับ tag &lt;img&gt; ใช้เพื่อแสดงประโยคเพื่อบ่งบอกว่าภาพนี้เป็นภาพอะไรในกรณีที่ ไม่สามารถแสดงภาพได้จากสาเหตุด้าน internet</h3>
+        &lt;img src="img_typo.jpg" alt="Girl with a jacket"&gt; <br>
+        <img src="img_typo.jpg" alt="Girl with a jacket">
+      <h3>style Attribute ใช้สำหรับเพิ่ม color font size และอื่นๆให้กับประโยค</h3>
+        &lt;p style="color:red;"&gt;This is a red paragraph.&lt;/p&gt;
+        <p style="color:red;">This is a red paragraph.</p>
+
+
+
+
+
+
+
+
+  <hr>
   <h2>ในหัวข้อ &lt; HTML Heading &gt; </h2>
   <p>Heading หมานถึวหัวข้อ ข้อความการประกาศ Heading นี้จะใข้ Tag &lt;h1&gt;, &lt;h2&gt; ,&lt;h3&gt; ไปจนถึง 6
   เช่นตัวอย่างนี้</p>
