--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         ซึ่ง  &lt;p&gt;....&lt;p&gt; ไว้สำหรับเขียน paragraph <br>
         &lt;br&gt; ไว้สำหรับเริ่มไปบรรทัดใหม่
 
-  <h3>พิมพ์ใหญ่ กับ พิมพ์เล็ก จะไม่ใช่คำสั่งเดียวกันใน HTML</h3> 
-  <p>เช่น <br>&lt;P&gt; ไม่ได้มีการทำงานเหมือนกับ &lt;p&gt;
-  <br>
-  <hr>    
+      <h3>พิมพ์ใหญ่ กับ พิมพ์เล็ก จะไม่ใช่คำสั่งเดียวกันใน HTML</h3> 
+      <p>เช่น <br>&lt;P&gt; ไม่ได้มีการทำงานเหมือนกับ &lt;p&gt;
+      <br>
+      <hr>    
     <h2>&lt;HTML Attribute&gt;</h2>
       <h3>&lt;a&gt; เป็น tag ที่ใช้สำหรับกำหนด hyperlink href=..... ใส่เป็น URL</h3>
         &lt;a href="https://www.w3schools.com">Visit W3Schools&lt;/a&gt;<br>
@@ -52,14 +52,6 @@
       <h3>style Attribute ใช้สำหรับเพิ่ม color font size และอื่นๆให้กับประโยค</h3>
         &lt;p style="color:red;"&gt;This is a red paragraph.&lt;/p&gt;
         <p style="color:red;">This is a red paragraph.</p>
-
-
-
-
-
-
-
-
   <hr>
   <h2>ในหัวข้อ &lt; HTML Heading &gt; </h2>
   <p>Heading หมานถึวหัวข้อ ข้อความการประกาศ Heading นี้จะใข้ Tag &lt;h1&gt;, &lt;h2&gt; ,&lt;h3&gt; ไปจนถึง 6
@@ -260,6 +252,11 @@
         <bdo dir="rtl">This line will be written from right to left</bdo>
 
       <hr>
+        <h2>ในหัวข้อHTML Comments ใช้เพื่อไม่ให้ข้อความที่คอมเม้นเหล่านั้นแสดงบนหน้าจอ browser</h2>
+        <p>เช่น &lt;!-- Write your comments here --!&gt;</p>
+        <h3>ไวยากรณ์คือ &lt;!-- ............... --!&gt;</h3>
+      <hr>
+        
 
 
 
