--- a/javascript.html
+++ b/javascript.html
@@ -1,1 +1,12 @@
-<img src="img/nun.png"alt="nun" >
+<html>
+    <head>
+        <title>กำลังเขียนครับ</title>
+        <img src="img/FB_IMG_15998896391291.jpg"alt="กำลังเขียนครับ" >
+
+
+
+
+
+        
+    </head>
+</html>
