add First JavaScript

--- a/javascript.html
+++ b/javascript.html
@@ -1,12 +1,34 @@
 <html>
     <head>
-        <title>กำลังเขียนครับ</title>
-        <img src="img/FB_IMG_15998896391291.jpg"alt="กำลังเขียนครับ" >
-
-
-
-
-
-        
+        <title>JavaScript</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/styles.css">
+        <!--Heading-->
+        <div class="heading">
+        <h1 style="text-align:center;"> JavaScript </h1>
+        <p>ตัวผู้เขียนทำการอธิบายที่ได้ศึกษา javascript โดยใช้เว็บอ้างอิงคือ <a href="https://www.w3schools.com/js/default.asp" target="_blank" ><b>w3schools</b></a></p>
+        </div>
     </head>
+    <body>
+        <div class="language">
+            <a href="index.html" target="_blank">Html</a><br>
+            <a href="javascript.html" target="_blank">Java language</a>
+        </div>
+        <div class="list_container">
+            <p class="contents_title">เนื้อหา</p>
+            <div class="list">
+                <a href="#js">JS Home</a><br>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+
+    </body>
 </html>
