--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>    
   <head>
+    <title>HTML</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -12,10 +13,10 @@
 
   <body>
     <div class="language">
+      <a href="index.html" target="_blank">Html</a><br>
       <a href="javascript.html" target="_blank">Java language</a>
     </div>
     <div class="list_container">
-      <nav>
       <p class="contents_title">เนื้อหา</p>
       <div class="list">
           <a href="#html_element">Elements</a><br>
@@ -31,7 +32,6 @@
           <a href="#html_link">Link</a><br>
           <a href="#html_img">img</a><br>
       </div>
-    </nav>
     </div>
 
       <!--Section1-->
