--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 
   <body>
     <div class="language">
-      <a href="index.html" target="_blank">Html</a><br>
-      <a href="javascript.html" target="_blank">Java language</a>
+      <a href="index.html" target="_self">Html</a><br>
+      <a href="javascript.html" target="_self">Java language</a>
     </div>
     <div class="list_container">
       <p class="contents_title">เนื้อหา</p>
       <div class="list">
-          <a href="#html_element">Elements</a><br>
-          <a href="#html_attribute">Attribute</a><br>
-          <a href="#html_heading">Heading</a><br>
-          <a href="#html_paragraphs">Paragraphs</a><br>
-          <a href="#html_style">Styles</a><br>
-          <a href="#html_formatting">text Format</a><br>
-          <a href="#html_quotation">Quotation </a><br>
-          <a href="#html_comment">Comments</a><br>
-          <a href="#html_color">Colors</a><br>
-          <a href="#html_css">CSS</a><br>
-          <a href="#html_link">Link</a><br>
-          <a href="#html_img">img</a><br>
+          <a href="#html_element">Html Elements</a><br>
+          <a href="#html_attribute">Html Attribute</a><br>
+          <a href="#html_heading">Html Heading</a><br>
+          <a href="#html_paragraphs">Html Paragraphs</a><br>
+          <a href="#html_style">Html Styles</a><br>
+          <a href="#html_formatting">Html text Format</a><br>
+          <a href="#html_quotation">Html Quotation </a><br>
+          <a href="#html_comment">Html Comments</a><br>
+          <a href="#html_color">Html Colors</a><br>
+          <a href="#html_css">Html CSS</a><br>
+          <a href="#html_link">Html Link</a><br>
+          <a href="#html_img">Html img</a><br>
       </div>
     </div>
 
