--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           <h2 id=html_quotation>ในหัวข้อ HMTL Quotation and Citation Elements</h2>
         </div>
         <div class="paragraph">
-            <h3>&lt; blockquote&gt; ใช้สำหรับตประโยคที่นำมาจากแหล่งอื่น ตัวประโยคจะถูกย้อหน้า เช่นตัวอย่าง</h3>
+            <h3>&lt; blockquote&gt; ใช้สำหรับประโยคที่นำมาจากแหล่งอื่น ตัวประโยคจะถูกย้อหน้า เช่นตัวอย่าง</h3>
               &lt;blockquote cite="http://www.worldwildlife.org/who/index.html"&gt; <br>
                 For 50 years, WWF has been protecting the future of nature.The world's leading conservation <br>
                 organization,WWF works in 100 countries and is supported by1.2 million members in the <br>
