--- a/javascript.html
+++ b/javascript.html
@@ -22,6 +22,7 @@
                 <a href="#js_Where2">JS Where To</a><br>
                 <a href="#js_output">JS Output</a><br>
                 <a href="#js_statement">JS Statment</a><br>
+                <a href="#js_syntax">JS Sytnax</a><br>
             </div>
           </div>
         
@@ -220,8 +221,66 @@
                         <div class="head">
                             <h2 id=js_statement>JavaScript Statement</h2>
                         </div>
-
+                        <div class="paragraph">
+                            <p>statement คือประโยคที่มีการกำหนดค่าเช่น</p>
+                                <pre>
+                                    var x, y, z;    // Statement 1
+                                    x = 5;          // Statement 2
+                                    y = 6;          // Statement 3
+                                    z = x + y;      // Statement 4
+                                </pre>
+                                <p>แสดงวาส JavaScript Statement ก็จะมีการกำหนดค่าเหมือนกัน    </p>
+                                <pre>
+                                    document.getElementById("demo").innerHTML = "Hello Dolly.";
+                                </pre>
+                            <h3>Semicolons (;)</h3>
+                                <p>Semicolons นั้นจะใช้เพื่อกำหนดว่านี่คือจุดหยุดของ statment นี้เช่น </p>
+                                    <pre>
+                                        var a, b, c;     // Declare 3 variables
+                                        a = 5;           // Assign the value 5 to a
+                                        b = 6;           // Assign the value 6 to b
+                                        c = a + b;       // Assign the sum of a and b to c
+                                    </pre>
+                                <p>เราสามารถเขียนในบรรทัดเดียวกันได้เลย</p>
+                                    <pre>
+                                        a = 5; b = 6; c = a + b;
+                                    </pre>
+                            <h3>White space</h3>
+                                <p>JavaScriptไม่ได้ sensitive ในการเว้นวรรคระหว่างการพิมพ์ แต่การเว้นวรรคทุกค่าจะช่วยให้อ่านง่านขึ้นเช่น</p>
+                                <pre>
+                                    var person = "Hege";
+                                    var person="Hege";
+                                    var x = y + z;
+                                </pre>
+                            <h3>Line Length and Line Breaks</h3>
+                                <p>เช่นกันการขึ้นบรรทัดใหม่ทั้งที่ไม่ได้มี semicolons นั้น JavaScriptจะอ่านไปเรื่อยๆจนกว่าจะเจอ semicolons</p>
+                                    <pre>
+                                        document.getElementById("demo").innerHTML =
+                                        "Hello Dolly!";
+                                        document.getElementById("demo").innerHTML ="Hello Dolly!";
+                                    </pre>
+                            <h3>Code Blocks</h3>
+                                <p>ในการเขียนฟังก์ชั่นทุกจะมีรูปแบบคือ funtion={........} ทุกอย่างที่อยู๋ใน {.....} 
+                                    จะอยู่ในการทำงานของ function นี้ เช่น
+                                </p>
+                                <pre>
+                                    function myFunction() {
+                                        document.getElementById("demo1").innerHTML = "Hello Dolly!";
+                                        document.getElementById("demo2").innerHTML = "How are you?";
+                                      }
+                                </pre>
+                        </div>
                 </div>
+                <div class="page">
+                    <div class="head">
+                        <h2 id=js_syntax>JavaScript Syntax</h2>
+                    </div>
+                    <div class="paragraph">
+
+                    </div>
+                </div>
+
+
           </div>
 
 
