--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="language">
       <a href="index.html" target="_self">Html</a><br>
-      <a href="javascript.html" target="_self">Java language</a>
+      <a href="javascript.html" target="_self">Java Script</a>
     </div>
     <div class="list_container">
       <p class="contents_title">เนื้อหา</p>
